--- a/src/components/mobile-drawer-nav/mobileNav.css
+++ b/src/components/mobile-drawer-nav/mobileNav.css
@@ -1,4 +1,8 @@
-@media (max-width: 855px) {
+.mobile_menu {
+  display: none;
+}
+
+@media (max-width: 900px) {
   .mobile_menu {
     display: block;
     border: 1px solid red;
