--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -5,6 +5,7 @@
 .toolbar {
   display: flex;
   border: 1px solid red;
+  align-items: center;
   justify-content: space-between;
 }
 .right-icons {
@@ -13,8 +14,18 @@
 .right-icons h6 {
   margin-left: 10px;
 }
+.search {
+  margin-right: -10%;
+}
 
-@media (max-width: 855px) {
+.fas {
+  color: #fff;
+  font-size: 1.8rem;
+  margin-left: 30px;
+  padding: 20px 0;
+}
+
+@media (max-width: 900px) {
   #navbar-desktop {
     display: none;
   }
