--- a/src/components/mobile-drawer-nav/mobileNav.css
+++ b/src/components/mobile-drawer-nav/mobileNav.css
@@ -1,11 +1,18 @@
 #mobile_hamburger {
   display: none;
 }
+.mobile-nav-item {
+  display: none;
+}
+.drawer-mobile-leftsection,
+.inner-mobile-topnav {
+  display: none;
+}
 
 @media (max-width: 900px) {
   #mobile_hamburger {
-    position: absolute;
-    top: 10px;
+    position: fixed;
+    top: 6px;
     z-index: 99;
     left: 88vw;
     display: block;
@@ -21,5 +28,20 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    width: 100%;
+  }
+  .drawer-mobile-leftsection {
+    background: #1b262a;
+    display: flex;
+    align-items: center;
+    width: 100%;
+  }
+  .inner-mobile-topnav {
+    display: block;
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+    width: 65%;
+    padding: 5px 0;
   }
 }
