--- a/src/components/header-carousel/HeaderCarousel.css
+++ b/src/components/header-carousel/HeaderCarousel.css
@@ -1,7 +1,8 @@
 .header-carousel-container {
-  margin-top: 9vh;
   max-height: 91vh;
   width: 100%;
+  position: relative;
+  top: 5rem;
 }
 
 .carousel-movie-info {
@@ -23,5 +24,6 @@
 
 .carousel-slide {
   cursor: pointer;
-  max-height: 91vh;
+  max-width: 100%;
+  max-height: 100%;
 }
