changed topicCarousel to topicHeader and created componet for the first inifinite Carousel

--- a/src/components/header-carousel/HeaderCarousel.css
+++ b/src/components/header-carousel/HeaderCarousel.css
@@ -4,6 +4,11 @@
   position: relative;
   top: 5rem;
 }
+@media (max-width: 900px) {
+  .header-carousel-container {
+    top: 0;
+  }
+}
 
 .carousel-movie-info {
   bottom: 2rem;
