--- a/src/components/home-main/HomeMain.css
+++ b/src/components/home-main/HomeMain.css
@@ -7,14 +7,16 @@
 .home-main-topic-container {
   font-family: "Lato", sans-serif;
   padding-bottom: 20px;
-  border: 1px solid red;
   width: 100%;
-  padding-top: 20px;
+  padding-top: 100px;
+}
+.home-main-topic-container:first-child {
+  padding-top: 30px;
 }
 
 .home-main-h2 {
   color: #ffffff;
-  font-size: 1rem;
+  font-size: 1.2rem;
   text-transform: uppercase;
   letter-spacing: 0.4rem;
   font-weight: bold;
@@ -28,5 +30,5 @@
   );
   border: none;
   height: 2px;
-  margin: 10px 0px;
+  margin: 50px 0px;
 }
