--- a/src/components/individual-movie/individualMovie.css
+++ b/src/components/individual-movie/individualMovie.css
@@ -1,7 +1,49 @@
-.individual-movie-parent {
-  height: 100vh;
-  border: 1px solid red;
+.individual-movie-darken {
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,.92) 80%);
+  height: 100%;
+  font-family: sans-serif;
 }
-h1 {
+
+.individual-movie-wrapper {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  border:1px solid red;
+}
+
+.individual-movie-inner {
+  display: flex;
+  height: 100%;
+  width: 85%;
+  justify-content: center;
+  border:1px solid red;
+  align-items:top; 
+}
+/* ---------------------------- main banner controls ---------------------------- */
+.movie-controls-main {
+  display: flex;
+  justify-content: space-between;
+}
+.movie-controls-main p {
   color: white;
+}
+
+
+
+/* ---------------------------- main banner content ---------------------------- */
+.movie-info-main {
+  display: flex;
+}
+.movie-info-main img {
+  max-width: 100%;
+  width:120px;
+  height: 190px;
+  border-radius: 5px;
+}
+
+h1 {
+  color: #ffffff;
+  font-size: 2.5rem;
+  font-weight: 700;
+
 }
