--- a/src/components/individual-movie/individualMovie.css
+++ b/src/components/individual-movie/individualMovie.css
@@ -54,6 +54,10 @@
 }
 .movie-info-main-right h1 {
   color: #ffffff;
-  font-size: 2.1rem;
+  font-size: 2rem;
   font-weight: 800;
+}
+.movie-banner-genres {
+  font-weight: 600; 
+  color:#666767;
 }
