--- a/src/components/individual-movie/individualMovie.css
+++ b/src/components/individual-movie/individualMovie.css
@@ -2,7 +2,7 @@
 
 /* ---------------------------- main banner darken the bottom of page ---------------------------- */
 .individual-movie-darken {
-  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,.92) 80%);
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,.88) 70%);
   height: 100%;
   font-family: 'Open Sans', sans-serif;
 
@@ -12,22 +12,19 @@
   display: flex;
   height: 100%;
   justify-content: center;
-  border:1px solid orange;
 }
 /* ---------------------------- main banner inner box  ---------------------------- */
 .individual-movie-inner {
   display: flex;
   height: 100%;
   width: 85%;
-  border:1px solid red;
   flex-direction: column;
 }
 /* ---------------------------- main banner controls ---------------------------- */
 .movie-controls-main {
   display: flex;
   justify-content: space-between;
-  border:1px solid greenyellow;
-  padding-bottom: 65vh;
+  padding-bottom: 52vh;
   padding-top: 8%;
 
 }
@@ -37,17 +34,14 @@
 /* ---------------------------- main banner content ---------------------------- */
 .movie-info-main {
   display: flex;
-  border:1px solid orange;
 }
 .movie-info-main img {
   max-width: 100%;
   width:120px;
   height: 180px;
-  border-radius: 7px;
   margin-right: 5%;
 }
 .movie-info-main-right {
-  border:1px solid pink;
   margin-right: 4%;
   color: #ffffff;
   font-weight: 800;
@@ -71,4 +65,6 @@
   margin-top: 2%;
   display: flex;
   justify-content: space-between;
+  align-items: top;
+
 }
