--- a/src/components/individual-movie/summaryInfo.css
+++ b/src/components/individual-movie/summaryInfo.css
@@ -1,6 +1,5 @@
 .summary {
   background: #161130;
-  padding-bottom: 100vh;
 }
 
 .summary-info {
@@ -27,4 +26,50 @@
 .casts {
   margin: 5% auto;
   width: 85%;
+}
+
+.trailers {
+  margin: 0 auto;
+  width: 85%;
+}
+.youtube {
+  padding-bottom: 8%;
+}
+
+.summary-reviews {
+  margin: 0 auto;
+  width: 85%;
+  padding-bottom: 10%;
+}
+
+.reviews-message {
+  background:#1A2226;
+  border-left: 5px solid #ffff;
+}
+.reviews-message h3 {
+  font-size: 1.4rem;
+  color:#ffff;
+  font-weight: 700;
+  padding: 0 0 5% 0;
+}
+
+.review-content-innner {
+  padding: 40px;
+}
+.actual-message {
+  color: #B7BABB;
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 1.55;
+}
+.see-full-review {
+  color: #888D8F;
+  font-weight: 800;
+  padding: 5% 0 0 0;
+  font-size:1rem;
+}
+.right-arrow-review {
+  color: #888D8F;
+  margin-left: 10px;
+  font-size: 13px;
 }
