--- a/src/components/individual-movie/summaryInfo.css
+++ b/src/components/individual-movie/summaryInfo.css
@@ -37,15 +37,17 @@
 }
 
 .summary-reviews {
-  margin: 0 auto;
-  width: 85%;
+  max-width: 85%;
   padding-bottom: 10%;
+  margin: 0 auto;  
 }
 
 .reviews-message {
   background:#1A2226;
-  border-left: 5px solid #ffff;
+  max-width: 800px;
+  margin: 0 auto;
 }
+
 .reviews-message h3 {
   font-size: 1.4rem;
   color:#ffff;
@@ -55,6 +57,8 @@
 
 .review-content-innner {
   padding: 40px;
+  margin: 8% 0;
+
 }
 .actual-message {
   color: #B7BABB;
@@ -65,9 +69,15 @@
 .see-full-review {
   color: #888D8F;
   font-weight: 800;
-  padding: 5% 0 0 0;
+  margin-top: 5%;
+  display:block;
+  text-decoration: none;
   font-size:1rem;
 }
+.see-full-review:hover{
+  color:#ffff;
+}
+
 .right-arrow-review {
   color: #888D8F;
   margin-left: 10px;
