--- a/src/components/individual-movie/summaryInfo.css
+++ b/src/components/individual-movie/summaryInfo.css
@@ -16,11 +16,11 @@
 
 /* ---------- global individual page style --------- */
 .secondary-main-header {
-   color: #fff;
-   font-size: 1.6rem;
-   text-transform: uppercase;
-   font-weight: 700;
-   padding: 3% 0;
+  color: #fff;
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 3% 0;
 }
 
 .casts {
@@ -34,23 +34,24 @@
 }
 .youtube {
   padding-bottom: 5%;
+  margin: 0px 50px;
 }
 
 .summary-reviews {
   max-width: 85%;
   padding-bottom: 10%;
-  margin: 0 auto;  
+  margin: 0 auto;
 }
 
 .reviews-message {
-  background:#1A2226;
+  background: #1a2226;
   max-width: 800px;
   margin: 0 auto;
 }
 
 .reviews-message h3 {
   font-size: 1.4rem;
-  color:#ffff;
+  color: #ffff;
   font-weight: 700;
   padding: 0 0 5% 0;
 }
@@ -58,28 +59,31 @@
 .review-content-innner {
   padding: 40px;
   margin: 8% 0;
-
 }
 .actual-message {
-  color: #B7BABB;
+  color: #b7babb;
   font-size: 1rem;
   font-weight: 700;
   line-height: 1.55;
 }
 .see-full-review {
-  color: #888D8F;
+  color: #888d8f;
   font-weight: 800;
   margin-top: 5%;
-  display:block;
+  display: block;
   text-decoration: none;
-  font-size:1rem;
+  font-size: 1rem;
 }
-.see-full-review:hover{
-  color:#ffff;
+.see-full-review:hover {
+  color: #ffff;
 }
 
 .right-arrow-review {
-  color: #888D8F;
+  color: #888d8f;
   margin-left: 10px;
   font-size: 13px;
+}
+
+.trailer-video-wrapper {
+  overflow: hidden;
 }
