--- a/src/components/movie-tv-switch/MovieTvSwitch.css
+++ b/src/components/movie-tv-switch/MovieTvSwitch.css
@@ -1,9 +1,7 @@
 .movie-tv-switch-container {
   background-color: #161130;
   max-width: 100%;
-  margin: 0 auto;
-  padding-top: 6rem;
-  padding-bottom: 4rem;
+  margin: 3rem auto;
 }
 
 .movie-tv-buttons-container {
